--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 
 html {
     box-sizing: border-box;
+    background-color: white;
 }
 
 /*Styles for the navigation bar, header and footer and other tags*/
@@ -33,7 +34,7 @@ nav ul li {
     color: #45494D;
     float: right;
     padding: 10px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 nav ul #logo {
@@ -71,7 +72,7 @@ th {
     color: white;
     padding: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 10px;
 }
 
 /*Styles for two rows, a side row and the main row*/
@@ -98,6 +99,11 @@ th {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.slides {
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .slowFade {
